Bug 49781 - Logitech wireless mouse often does not work
Summary: Logitech wireless mouse often does not work
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Input Devices (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Jiri Kosina
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-30 11:31 UTC by uzytkownik2@gmail.com
Modified: 2013-03-17 13:01 UTC (History)
3 users (show)

See Also:
Kernel Version: 3.5-3.7
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments

Description uzytkownik2@gmail.com 2012-10-30 11:31:02 UTC
When I try to use logitech wireless mouse it often doesn't work on 3.5+ (it worked on 3.4). In dmesg log it indicates that query of paired devices failed.

[ 6797.950191] logitech-djreceiver 0003:046D:C52B.0006: hiddev0,hidraw0: USB HID v1.11 Device [Logitech USB Receiver] on usb-0000:00:14.0-1/input2
[ 6797.950508] logitech-djreceiver 0003:046D:C52B.0006: logi_dj_probe:logi_dj_recv_query_paired_devices error:-32
[ 6797.950658] logitech-djreceiver: probe of 0003:046D:C52B.0006 failed with error -32
Comment 1 Jiri Kosina 2012-12-03 13:01:38 UTC
Could you please try with 3.6 if you are using unifying receiver? 596264082f1 might fix this problem.
Comment 2 uzytkownik2@gmail.com 2012-12-03 13:38:08 UTC
(In reply to comment #1)
> Could you please try with 3.6 if you are using unifying receiver? 596264082f1
> might fix this problem.

I'm currently on 3.6 branch and it still does not work (I managed to make it work once after resume from suspend but I was unable to repro ever since so I have no idea what caused it).
Comment 3 uzytkownik2@gmail.com 2012-12-12 22:10:56 UTC
(In reply to comment #1)
> Could you please try with 3.6 if you are using unifying receiver? 596264082f1
> might fix this problem.

Hmm. It looks like ~3.6.10 it started working.
Comment 4 uzytkownik2@gmail.com 2012-12-13 11:37:04 UTC
(In reply to comment #3)
> (In reply to comment #1)
> > Could you please try with 3.6 if you are using unifying receiver?
> 596264082f1
> > might fix this problem.
> 
> Hmm. It looks like ~3.6.10 it started working.

I got repro on 3.7.
Comment 5 uzytkownik2@gmail.com 2013-02-05 18:32:17 UTC
Is there any way I could help solving this problem?
Comment 6 Florian Mickler 2013-03-13 00:09:23 UTC
A patch referencing this bug report has been merged in Linux v3.9-rc2:

commit dcd9006b1b053c7b1cebe81333261d4fd492ffeb
Author: Benjamin Tissoires <benjamin.tissoires@redhat.com>
Date:   Tue Mar 5 17:09:00 2013 +0100

    HID: logitech-dj: do not directly call hid_output_raw_report() during probe
Comment 7 uzytkownik2@gmail.com 2013-03-13 20:03:17 UTC
(In reply to comment #6)
> A patch referencing this bug report has been merged in Linux v3.9-rc2:
> 
> commit dcd9006b1b053c7b1cebe81333261d4fd492ffeb
> Author: Benjamin Tissoires <benjamin.tissoires@redhat.com>
> Date:   Tue Mar 5 17:09:00 2013 +0100
> 
>     HID: logitech-dj: do not directly call hid_output_raw_report() during
>     probe

I've cherry-picked the commit. The error is gone but mouse doesn't work. I.e. cat /dev/input/mice doesn't show anything when mouse is moved.
Comment 8 uzytkownik2@gmail.com 2013-03-17 13:01:17 UTC
(In reply to comment #7)
> (In reply to comment #6)
> > A patch referencing this bug report has been merged in Linux v3.9-rc2:
> > 
> > commit dcd9006b1b053c7b1cebe81333261d4fd492ffeb
> > Author: Benjamin Tissoires <benjamin.tissoires@redhat.com>
> > Date:   Tue Mar 5 17:09:00 2013 +0100
> > 
> >     HID: logitech-dj: do not directly call hid_output_raw_report() during
> probe
> 
> I've cherry-picked the commit. The error is gone but mouse doesn't work. I.e.
> cat /dev/input/mice doesn't show anything when mouse is moved.

PBCAK - empty batteries might had something in common with not working mouse.

Note You need to log in before you can comment on or make changes to this bug.